removed lite-server due to vulnerability

--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
     "start": "lite-server"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.6.1"
-  }
+  "license": "ISC"
 }
